--- a/pongpong/pongpong.csproj
+++ b/pongpong/pongpong.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>pongpong</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -58,7 +59,9 @@
     <Compile Include="BaseObject.cs" />
     <Compile Include="Collision.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="GameButton.cs" />
     <Compile Include="IVertexContaining.cs" />
+    <Compile Include="Lobby.cs" />
     <Compile Include="Obstacle.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
